--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ background: linear-gradient(to right, #6d8aac, #0a101b);
     background: lightgray;
 }
 
+#event-card {
+    background: lightgray;
+}
+
 #team{
     text-align: center;
     font-size: 81px;
@@ -22,4 +26,9 @@ background: linear-gradient(to right, #6d8aac, #0a101b);
 .card:hover{
     box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.date {
+    font-size: 15px;
+}
+
 
